--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "clsx": "^1.2.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "next": "13.4.6",
@@ -31,12 +32,14 @@
     "@storybook/addon-essentials": "^7.0.23",
     "@storybook/addon-interactions": "^7.0.23",
     "@storybook/addon-links": "^7.0.23",
+    "@storybook/addon-styling": "^1.3.0",
     "@storybook/blocks": "^7.0.23",
     "@storybook/nextjs": "^7.0.23",
     "@storybook/react": "^7.0.23",
     "@storybook/testing-library": "^0.0.14-next.2",
     "daisyui": "^3.1.5",
     "eslint-plugin-storybook": "^0.6.12",
-    "storybook": "^7.0.23"
+    "storybook": "^7.0.23",
+    "storybook-addon-data-theme-switcher": "^0.1.7"
   }
 }
